--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vim/bundle/vim-processing"]
 	path = vim/bundle/vim-processing
 	url = https://github.com/sophacles/vim-processing.git
+[submodule "vim/bundle/tagbar"]
+	path = vim/bundle/tagbar
+	url = https://github.com/majutsushi/tagbar.git
