--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vim/bundle/vim-xdebug"]
 	path = vim/bundle/vim-xdebug
 	url = https://github.com/ludovicPelle/vim-xdebug.git
+[submodule "vim/bundle/scvim"]
+	path = vim/bundle/scvim
+	url = git://github.com/elatomo/scvim.git
