--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "vim/bundle/phpcomplete"]
 	path = vim/bundle/phpcomplete
 	url = git://github.com/shawncplus/phpcomplete.vim.git
+[submodule "vim/bundle/scvim"]
+	path = vim/bundle/scvim
+	url = git://github.com/elatomo/scvim.git
