--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "vim/bundle/scvim"]
 	path = vim/bundle/scvim
 	url = git://github.com/elatomo/scvim.git
+[submodule "vim/bundle/vim-virtualenv"]
+	path = vim/bundle/vim-virtualenv
+	url = git://github.com/jmcantrell/vim-virtualenv.git
