Tmux: xterm terminal + mouse on windows/panes.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 # 256 colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 # remap prefix to Control + a
 set -g prefix C-a
@@ -17,3 +17,9 @@ bind ^A select-pane -t :.+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
+
+# Mouse on windows/panes
+set -g mode-mouse on
+setw -g mouse-select-window on
+setw -g mouse-select-pane on
+set -g mouse-resize-pane off # 'on' conflicts with mouse text select
