Activate tmux mouse-resize-pane (text select works with the SHIFT key).

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -22,4 +22,4 @@ set -g pane-base-index 1
 set -g mode-mouse on
 setw -g mouse-select-window on
 setw -g mouse-select-pane on
-set -g mouse-resize-pane off # 'on' conflicts with mouse text select
+set -g mouse-resize-pane on
