Tmux: no mouse.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,7 +19,7 @@ set -g base-index 1
 set -g pane-base-index 1
 
 # Mouse on windows/panes
-set -g mode-mouse on
-setw -g mouse-select-window on
-setw -g mouse-select-pane on
-set -g mouse-resize-pane on
+#set -g mode-mouse on
+#setw -g mouse-select-window on
+#setw -g mouse-select-pane on
+#set -g mouse-resize-pane on
