tmux: toggle pane zoom.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,6 +18,11 @@ bind ^A select-pane -t :.+
 set -g base-index 1
 set -g pane-base-index 1
 
+# Toggle pane fullscreen
+# FIXME don't work with vim
+unbind x
+bind x run ~/dotfiles/tmux/zoom_pane
+
 # Mouse on windows/panes
 #set -g mode-mouse on
 #setw -g mouse-select-window on
