Tmux: remap window split to s and v.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,6 +10,12 @@ bind C-a send-prefix
 unbind r
 bind r source-file ~/.tmux.conf
 
+# Window splitting
+unbind s
+bind s split-window -h
+unbind v
+bind v split-window -v
+
 # quick pane cycling
 unbind ^A
 bind ^A select-pane -t :.+
