--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,9 @@
 # 256 colors
 set -g default-terminal "xterm-256color"
 
+# vi mode
+set-window-option -g mode-keys vi
+
 # remap prefix to Control + a
 set -g prefix C-a
 unbind C-b
@@ -9,6 +12,14 @@ bind C-a send-prefix
 # force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf
+
+# New window
+unbind n
+bind n new-window
+
+# Closing
+unbind q
+bind q kill-pane
 
 # Window splitting
 unbind s
@@ -19,6 +30,8 @@ bind v split-window -v
 # quick pane cycling
 unbind ^A
 bind ^A select-pane -t :.+
+
+# TODO Pane movement
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
