--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,12 @@
 [submodule "vim/bundle/vimwiki"]
 	path = vim/bundle/vimwiki
 	url = https://github.com/vim-scripts/vimwiki.git
+[submodule "themes/base16-xresources"]
+	path = themes/base16-xresources
+	url = https://github.com/chriskempson/base16-xresources.git
+[submodule "themes/base16-vim"]
+	path = themes/base16-vim
+	url = https://github.com/chriskempson/base16-vim.git
+[submodule "vim/bundle/base16-vim"]
+	path = vim/bundle/base16-vim
+	url = https://github.com/chriskempson/base16-vim.git
