--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "config/vim/bundle/base16-vim"]
 	path = config/vim/bundle/base16-vim
 	url = https://github.com/chriskempson/base16-vim.git
+[submodule "config/vim/bundle/ctrlp-vim"]
+	path = config/vim/bundle/ctrlp-vim
+	url = https://github.com/kien/ctrlp.vim.git
