--- a/config/i3/config
+++ b/config/i3/config
@@ -66,6 +66,9 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
+# auto back-and-forth on workspace switch
+workspace_auto_back_and_forth yes
+
 # split in horizontal orientation (overrides $mod+h)
 bindsym $mod+z split h
 
