--- a/config/i3/config
+++ b/config/i3/config
@@ -13,8 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
-# font pango:Terminess Powerline 14
-font -*-terminus-medium-*-normal-*-17-*-*-*-*-*-*-*
+font -xos4-terminus-medium-*-normal-*-17-*-*-*-*-*-*-*
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -26,7 +25,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run -fn "Terminess\ Powerline:style=Regular:size=22:antialias=false"
+bindsym $mod+d exec dmenu_run -fn "xos4\ Terminus:style=Regular:size=22:antialias=false"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
