--- a/config/i3/config
+++ b/config/i3/config
@@ -32,12 +32,6 @@ bindsym $mod+Return exec i3-sensible-terminal
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run -fn "xos4\ Terminus:style=Regular:size=22:antialias=false"
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 # NOTE: defaults are overridden to better match VIM motion:
@@ -45,6 +39,9 @@ bindsym $mod+d exec dmenu_run -fn "xos4\ Terminus:style=Regular:size=22:antialia
 # - k: up
 # - h: left
 # - l: right
+# start program launcher
+bindsym $mod+d exec --no-startup-id dmenu_recency -fn "xos4\ Terminus:style=Regular:size=22:antialias=false"
+
 bindsym $mod+h focus left
 bindsym $mod+j focus down
 bindsym $mod+k focus up
