--- a/config/i3/config
+++ b/config/i3/config
@@ -32,13 +32,6 @@ bindsym $mod+Return exec i3-sensible-terminal
 # kill focused window
 bindsym $mod+Shift+q kill
 
-
-# change focus
-# NOTE: defaults are overridden to better match VIM motion:
-# - j: down
-# - k: up
-# - h: left
-# - l: right
 # start program launcher
 bindsym $mod+d exec --no-startup-id dmenu_recency -fn "xos4\ Terminus:style=Regular:size=22:antialias=false"
 
@@ -67,6 +60,7 @@ bindsym $mod+Print --release exec --no-startup-id i3-scrot -w
 bindsym $mod+Shift+Print --release exec --no-startup-id i3-scrot -s
 bindsym $mod+Ctrl+x --release exec --no-startup-id xkill
 
+# change focus: vim motions
 bindsym $mod+h focus left
 bindsym $mod+j focus down
 bindsym $mod+k focus up
@@ -78,12 +72,11 @@ bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
-# move focused window
+# move focused window: vim motions
 bindsym $mod+Shift+h move left
 bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
-
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -91,7 +84,7 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-# auto back-and-forth on workspace switch
+# workspace back and forth (with/without active container)
 workspace_auto_back_and_forth yes
 
 # split in horizontal orientation (overrides $mod+h)
