--- a/config/i3/config
+++ b/config/i3/config
@@ -87,11 +87,11 @@ bindsym $mod+Shift+Right move right
 # workspace back and forth (with/without active container)
 workspace_auto_back_and_forth yes
 
-# split in horizontal orientation (overrides $mod+h)
-bindsym $mod+z split h
+# split orientation (overrides $mod+h)
+bindsym $mod+z split h;exec notify-send 'tile horizontally'
+bindsym $mod+v split v;exec notify-send 'tile vertically'
+bindsym $mod+q split toggle
 
-# split in vertical orientation
-bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen
