i3: fullscreen mode toggle.

--- a/config/i3/config
+++ b/config/i3/config
@@ -92,9 +92,8 @@ bindsym $mod+z split h;exec notify-send 'tile horizontally'
 bindsym $mod+v split v;exec notify-send 'tile vertically'
 bindsym $mod+q split toggle
 
-
-# enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen
+# toggle fullscreen mode for the focused container
+bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
