--- a/config/i3/config
+++ b/config/i3/config
@@ -253,6 +253,9 @@ mode "resize" {
 # Lock screen
 bindsym $mod+9 exec --no-startup-id blurlock
 
+# Automatically select a display configuration
+exec_always --no-startup-id autorandr -c
+
 # Autostart applications
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id nitrogen --restore; sleep 1; compton -b
