--- a/config/i3/config
+++ b/config/i3/config
@@ -318,16 +318,15 @@ bar {
 	strip_workspace_numbers yes
 
     colors {
-        background #222D31
-        statusline #F9FAF9
-        separator  #454947
+        background #fdf6e3
+        statusline #657b83
+        separator  #cb4b16
 
-#                      border  backgr. text
-        focused_workspace  #F9FAF9 #16a085 #292F34
-        active_workspace   #595B5B #353836 #FDF6E3
-        inactive_workspace #595B5B #222D31 #EEE8D5
-        binding_mode       #16a085 #2C2C2C #F9FAF9
-        urgent_workspace   #16a085 #FDF6E3 #E5201D
+#       class              border  backgr. text
+        focused_workspace  #fdf6e3 #fdf6e3 #586e75
+        active_workspace   #fdf6e3 #fdf6e3 #586e75
+        inactive_workspace #eee8d5 #eee8d5 #93a1a1
+        urgent_workspace   #d33682 #d33682 #586e75
     }
 }
 
@@ -335,14 +334,16 @@ bar {
 bindsym $mod+m bar mode toggle
 
 # Theme colors
-# class                   border  backgr. text    indic.   child_border
-  client.focused          #556064 #556064 #80FFF9 #FDF6E3
-  client.focused_inactive #2F3D44 #2F3D44 #1ABC9C #454948
-  client.unfocused        #2F3D44 #2F3D44 #1ABC9C #454948
-  client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
-  client.placeholder      #000000 #0c0c0c #ffffff #000000 
+# class                   border  backgr. text    indicator
+# client.focused          base2   base2   base00  violet
+  client.focused          #eee8d5 #eee8d5 #657b83 #6c71c4
+# client.focused_inactive base2   base2   base00  violet
+  client.focused_inactive #eee8d5 #eee8d5 #657b83 #6c71c4
+# client.unfocused        base3   base3   base01  base01
+  client.unfocused        #fdf6e3 #fdf6e3 #586e75 #586e75
+# client.urgent           magenta magenta base3   red
+  client.urgent           #d33682 #d33682 #fdf6e3 #dc322f
 
-  client.background       #2B2C2B
 
 #############################
 ### settings for i3-gaps: ###
