--- a/config/i3/config
+++ b/config/i3/config
@@ -21,7 +21,7 @@ bindsym $mod+n border normal
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
-font -xos4-terminus-medium-*-normal-*-17-*-*-*-*-*-*-*
+font pango:Source Code Pro, Source Code Pro SemiBold 11
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
