--- a/config/i3/config
+++ b/config/i3/config
@@ -33,7 +33,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start program launcher
-bindsym $mod+d exec --no-startup-id dmenu_recency -fn "xos4\ Terminus:style=Regular:size=22:antialias=false"
+bindsym $mod+d exec --no-startup-id dmenu_recency -fn "Source Code Pro:style=SemiBold:size=20" -nb "#fdf6e3" -nf "#657b83" -sb "#eee8d5" -sf "#268bd2"
 
 # sound section
 exec --no-startup-id volumeicon
