Update default git config values

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,5 +1,5 @@
 [user]
     name = José Fernández Ramos
-    email = jframos@fastmail.com
+    email = jose@navika.io
 [init]
-	defaultBranch = main
+    defaultBranch = main
