--- a/i3/.config/i3status/config
+++ b/i3/.config/i3status/config
@@ -17,10 +17,8 @@ general {
 # order += "ipv6"
 order += "cpu_usage"
 order += "disk /"
-# order += "disk /home"
-order += "wireless _first_"
-# order += "ethernet _first_"
-# order += "load"
+order += "ethernet _first_"
+order += "load"
 order += "memory"
 order += "tztime local"
 
